--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "http-status": "^1.7.4",
     "rimraf": "^5.0.5",
+    "vercel": "^33.6.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
