--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "envalid": "^8.0.0",
     "express": "^4.18.2",
     "http-status": "^1.7.4",
+    "jsonwebtoken": "^9.0.2",
     "rimraf": "^5.0.5",
     "vercel": "^33.6.2",
     "zod": "^3.22.4"
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.30",
     "prisma": "^5.11.0",
     "ts-node": "^10.9.2",
