--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.30",
+    "@types/passport": "^1.0.16",
     "prisma": "^5.11.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
